--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
 <mat-toolbar>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-  >
+  <button mat-icon-button (click)="isExpanded = !isExpanded">
     <mat-icon>menu</mat-icon>
   </button>
+
   <span>My App</span>
+
   <span class="example-spacer"></span>
+
   <button
     mat-icon-button
     class="example-icon favorite-icon"
@@ -15,6 +14,7 @@
   >
     <mat-icon>favorite</mat-icon>
   </button>
+
   <button
     mat-icon-button
     class="example-icon"
@@ -24,4 +24,63 @@
   </button>
 </mat-toolbar>
 
-<router-outlet></router-outlet>
+<mat-sidenav-container class="example-container" autosize>
+  <mat-sidenav
+    #sidenav
+    class="example-sidenav"
+    mode="side"
+    opened="true"
+    (mouseenter)="mouseenter()"
+    (mouseleave)="mouseleave()"
+  >
+    <mat-nav-list>
+      <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent">
+        <span class="full-width" *ngIf="isExpanded || isShowing"
+          >Parent Menu</span
+        >
+        <mat-icon mat-list-icon>home</mat-icon>
+        <mat-icon
+          class="menu-button"
+          [ngClass]="{ rotated: showSubmenu }"
+          *ngIf="isExpanded || isShowing"
+          >expand_more</mat-icon
+        >
+      </mat-list-item>
+      <div
+        class="submenu"
+        [ngClass]="{ expanded: showSubmenu }"
+        *ngIf="isShowing || isExpanded"
+      >
+        <a mat-list-item href="...">Submenu Item 1</a>
+        <a mat-list-item href="...">Submenu Item 2</a>
+        <mat-list-item
+          (click)="showSubSubMenu = !showSubSubMenu"
+          class="parent"
+        >
+          <span class="full-width" *ngIf="isExpanded || isShowing"
+            >Nested Menu</span
+          >
+          <mat-icon
+            class="menu-button"
+            [ngClass]="{ rotated: showSubSubMenu }"
+            *ngIf="isExpanded || isShowing"
+            >expand_more</mat-icon
+          >
+        </mat-list-item>
+        <div
+          class="submenu"
+          [ngClass]="{ expanded: showSubSubMenu }"
+          *ngIf="isShowing || isExpanded"
+        >
+          <mat-list-item>SubSubmenu Item 1</mat-list-item>
+          <mat-list-item>SubSubmenu Item 2</mat-list-item>
+        </div>
+      </div>
+    </mat-nav-list>
+    <mat-nav-list> </mat-nav-list>
+  </mat-sidenav>
+
+  <div class="example-sidenav-content">
+    <router-outlet></router-outlet>
+  </div>
+</mat-sidenav-container>
