seemingly working sidenav

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,37 @@
+.container_outer {
+  width: 100%;
+}
+
+.container_inner {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  position: sticky;
+}
+
+.main_content {
+  display: flex;
+  height: 100%;
+}
+
+.mat-drawer-container {
+  position: fixed;
+  z-index: 1;
+  box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
+  display: block;
+  overflow: hidden;
+}
+
 .example-spacer {
   flex: 1 1 auto;
 }
 
 .example-container {
-  height: 500px;
+  height: 100%;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 .example-sidenav-content {
