--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -101,3 +101,4 @@
   facere, voluptatum a odio laudantium, nobis blanditiis tempora cum? Omnis
   tenetur aperiam perspiciatis dicta. Dolore eum facere laboriosam.
 </p>
+<p>this is the end of the component</p>
