--- a/src/app/second/second.component.html
+++ b/src/app/second/second.component.html
@@ -67,3 +67,5 @@
   doloribus? Quisquam omnis quidem quam saepe expedita quaerat repudiandae et
   sunt ratione accusamus.
 </p>
+
+<p>this is the end of the component</p>
