--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
-.container_outer {
+.w_full {
   width: 100%;
 }
 
-.container_inner {
+.h_full {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -10,39 +10,39 @@
 
 .header {
   position: sticky;
-}
-
-.main_content {
   display: flex;
-  height: 100%;
+  align-items: center;
+  flex-direction: row;
+  top: 0;
+  position: sticky;
+  z-index: 1000;
 }
 
-.mat-drawer-container {
+.document_body {
+  display: flex;
+}
+
+.mat-drawer {
+  z-index: 2;
   position: fixed;
-  z-index: 1;
-  box-sizing: border-box;
-  -webkit-overflow-scrolling: touch;
-  display: block;
-  overflow: hidden;
+  margin-top: 4rem;
+}
+
+.main_content_outer {
+  display: flex;
+  flex-direction: column;
+}
+
+.main_content_inner {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
 }
 
 .example-spacer {
   flex: 1 1 auto;
 }
 
-.example-container {
-  height: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
-.example-sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-.example-sidenav {
-  user-select: none;
-}
 .full-width {
   width: 100%;
 }
